# beatit

./: .gitignore
examples/example_fibers_monodomain_merged/: CMakeLists.txt  data.beat  main.cpp  main.cpp.save  main_before_1ptbc.cpp
examples/example_laryssa/: main.cpp
examples/example_laryssa_LA_fibers/: .main.cpp.swp  CMakeLists.txt  data_m3.beat  example_laryssa_LA_fibers  input.secondary1  input.secondary2  input.secondary3  main.cpp  main_05032022_petsc_segfault.cpp
examples/example_laryssa_calc_edge_length/: CMakeLists.txt  F72_milano_fibers.e  main.cpp
examples/example_laryssa_define_subregions/: CMakeLists.txt  main.cpp
examples/example_laryssa_explicit_monodomain/: data.beat  main.cpp
examples/example_laryssa_extract_surface/: .main.cpp.swp  CMakeLists.txt  main.cpp  main_meet_simone.cpp
examples/example_laryssa_jacobian/: CMakeLists.txt  main.cpp
examples/example_laryssa_map_fibers/: .main.cpp.swo  CMakeLists.txt  main.cpp  main_complete.cpp  main_libmesh_test.cpp
examples/example_laryssa_naming_mesh/: .main.cpp.swp  CMakeLists.txt  main.cpp
examples/example_laryssa_read_meshinfo_parallel/: CMakeLists.txt  main.cpp
examples/example_laryssa_refine_mesh/: CMakeLists.txt  data.beat  main.cpp
examples/example_read_tet_mesh/: CMakeLists.txt  main.cpp
examples/example_remap_region/: brute_force_050422.cpp  brute_force_assign_material.cpp  brute_force_fiber_system.cpp  brute_mergeblock_read_fiber_importer.cpp  main.cpp
examples/playground/: CMakeLists.txt  gmsh2exo.cpp
examples/test_laryssa_define_subregions/: CMakeLists.txt  main.cpp
src/Elasticity/: DynamicElasticity.cpp  MixedDynamicElasticity.cpp
src/PoissonSolver/: Poisson.cpp
(+12 files in other folders)
